--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ body {
 <div class="container">
     <div class="centered">BHARTIA ITI</div>
     <div class="sub-sub-centered">An ISO 2010 Certified Institute</div>
-    <div class="top-left"><a href="iti_web.html" style="color: white;">HOME</a></div>
+    <div class="top-left"><a href="index.html" style="color: white;">HOME</a></div>
     <div class="button-container">
         <!-- Button with image to navigate to the library facility -->
         <div class="button" onclick="window.location.href='open_area.html'">
