--- a/academics.html
+++ b/academics.html
@@ -95,7 +95,7 @@ body {
 <div class="container">
     <div class="centered">ACADEMIC ACTIVITIES</div>
     <div class="sub-sub-centered">Explore our academic programs</div>
-    <div class="top-left"><a href="iti_web.html" style="color: white;">HOME</a></div>
+    <div class="top-left"><a href="index.html" style="color: white;">HOME</a></div>
     <div class="button-container">
         <div class="button" onclick="window.location.href='tablet.html'">
             <img src="a1.jpg" alt=" Activity">
