--- a/certification.html
+++ b/certification.html
@@ -95,7 +95,7 @@ body {
 <div class="container">
     <div class="centered">BHARTIA ITI</div>
     <div class="sub-sub-centered">An ISO 2010 Certified Institute</div>
-    <div class="top-left"><a href="iti_web.html" style="color: white;">HOME</a></div>
+    <div class="top-left"><a href="index.html" style="color: white;">HOME</a></div>
     <img src="r1.jpg" alt="EE" style="width: 50%; height: auto;"> <!-- Decrease the size of the image -->
     <p class="button-name">Our MOU with Ashraj Foundation for placements</p> <br><br><br>
 
