--- a/computer.html
+++ b/computer.html
@@ -94,7 +94,7 @@ body {
 <div class="container">
     <div class="centered">BHARTIA ITI</div>
     <div class="sub-sub-centered">An ISO 2010 Certified Institute</div>
-    <div class="top-left"><a href="iti_web.html" style="color: white;">HOME</a></div>
+    <div class="top-left"><a href="index.html" style="color: white;">HOME</a></div>
     <img src="c1.jpg" alt="E" style="width: 100%; height: auto;">
     <img src="c6.jpg" alt="E" style="width: 100%; height: auto;">
     <img src="c7.jpg" alt="E" style="width: 100%; height: auto;">
