--- a/fitter.html
+++ b/fitter.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* Reset default margin and padding */
 * {
     margin: 0;
     padding: 0;
@@ -63,8 +62,8 @@ body {
 }
 
 .button {
-    width: 250px; /* Increase button width */
-    height: 300px; /* Increase button height */
+    width: 250px; 
+    height: 300px; 
     border: 2px solid #ccc;
     border-radius: 20px;
     background-color: white;
@@ -94,7 +93,7 @@ body {
 <div class="container">
     <div class="centered">BHARTIA ITI</div>
     <div class="sub-sub-centered">An ISO 2010 Certified Institute</div>
-    <div class="top-left"><a href="iti_web.html" style="color: white;">HOME</a></div>
+    <div class="top-left"><a href="index.html" style="color: white;">HOME</a></div>
     <img src="e1.jpg" alt="E" style="width: 100%; height: auto;">
     <img src="e2.jpg" alt="E" style="width: 100%; height: auto;">
     
