--- a/stackholder.html
+++ b/stackholder.html
@@ -95,7 +95,7 @@ body {
     <div class="centered">BHARTIA ITI</div>
     <div class="sub-sub-centered">An ISO 2010 Certified Institute</div>
     <h2>Bosch stakeholders meeting at bhartia ITI Etah</h2>
-    <div class="top-left"><a href="iti_web.html" style="color: white;">HOME</a></div>
+    <div class="top-left"><a href="index.html" style="color: white;">HOME</a></div>
     <img src="q24.jpg" alt="EE" style="width: 50%; height: auto;"> 
 
     <img src="q25.jpg" alt="EE" style="width: 50%; height: auto;"> 
