--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* Reset default margin and padding */
 * {
     margin: 0;
     padding: 0;
@@ -63,8 +62,8 @@ body {
 }
 
 .button {
-    width: 250px; /* Increase button width */
-    height: 300px; /* Increase button height */
+    width: 250px;
+    height: 300px; 
     border: 2px solid #ccc;
     border-radius: 20px;
     background-color: white;
