--- a/certification.html
+++ b/certification.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* Reset default margin and padding */
 * {
     margin: 0;
     padding: 0;
@@ -63,8 +62,8 @@ body {
 }
 
 .button {
-    width: 250px; /* Increase button width */
-    height: 300px; /* Increase button height */
+    width: 250px;
+    height: 300px; 
     border: 2px solid #ccc;
     border-radius: 20px;
     background-color: white;
@@ -85,9 +84,9 @@ body {
 }
 
 .button-name {
-    font-size: 1.2rem; /* Increase the size of the text */
+    font-size: 1.2rem;
     margin-top: 10px;
-    font-family: 'Roboto', sans-serif; /* Apply a professional font */
+    font-family: 'Roboto', sans-serif;
 }
 </style>
 </head>
