--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="certification.html">Certifications</a></li>
             <li><a href="academics.html">Academics</a></li>
-            <li><a href="iti_web.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </div>
     <div class="container slideshow-container">
@@ -271,7 +271,7 @@
         </div>
     </div>
     <div class="container">
-        <h2>Our Faculty</h2> <!-- Add the heading here -->
+        <h2>Our Faculty</h2> 
     <div class="container faculty-container">
         <div class="faculty-card">
             <img src="p1.png" alt="Faculty 1" class="faculty-img">
@@ -319,7 +319,7 @@
             <img src="p7.jpg" alt="Faculty 7" class="faculty-img">
             <div class="faculty-info">
                 <div class="faculty-name">Areeba Khan</div>
-                <div class="faculty-position">Vice Head</div>
+                <div class="faculty-position">Manager</div>
             </div>
         </div>
     </div>
