--- a/index.html
+++ b/index.html
@@ -261,9 +261,11 @@
                 </ul><br>
                 <p><strong>Our Main Focus</strong></p>
                 <ul>
-                    <li>We have tie up with NIELET for computer institution i.e ONLINE NIELET EXAMS, TATA COMPS</li>
+                    <li>Affiliated with NIELIT for Olevel,CCC courses</li>
+                    <li>Largest Computer Lab for all online exams facility</li>
+                    <li>We have tie up with TCS and NIELIT and Vensysco for online exams</li>
                     <li>We have MOU with Ashraj foundation for placements</li>
-                    <li>We also have NSDC(National Skill Development Corporation) as our training partner for short term courses</li>
+                    <li>Training partner forn NSDC for short term courses</li>
                     <li>Our Authorized partnership with BOSCH company which offers BRIDGE(Bosch’s Response to India’s Development and Growth through Employability Enhancement) with different different training beneficial for students.</li>
                     <li>We also have partnership with Vigyan Club</li>
                 </ul>
