--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="menu">
         <ul>
             <li><a href="about.html">Facilities</a></li>
-            <li><a href="application.html">Admission Form</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSewBw19K7-Wyfxb3lefKXeAxUKKAV_ppt-JeJ3WNjD9jOpyow/viewform?usp=sf_link">Admission Form</a></li>
             <li><a href="#about-section">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="certification.html">Certifications</a></li>
